--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "vitest",
+		"test": "vitest --run",
 		"start:dev": "npx tsx --watch --env-file=.env.development src/server.ts",
-		"kysely:codegen": "kysely-codegen --out-file ./src/types/db.ts --camel-case --dialect=postgres --runtime-enums=pascal-case",
+		"kysely:codegen": "kysely-codegen --out-file ./src/common/types/db.ts --camel-case --dialect=postgres --runtime-enums=pascal-case",
 		"migration:create": "npx kysely migrate:make",
 		"migration:run": "npx kysely migrate:latest",
 		"migration:rollback": "npx kysely migrate:rollback --all",
@@ -29,13 +29,17 @@
 	"license": "ISC",
 	"type": "module",
 	"devDependencies": {
+		"@faker-js/faker": "^10.1.0",
+		"@testcontainers/redis": "^11.8.1",
 		"@tsconfig/node24": "^24.0.1",
 		"@types/node": "^24.10.0",
 		"@types/nodemailer": "^7.0.3",
 		"kysely-codegen": "^0.19.0",
 		"kysely-ctl": "^0.19.0",
 		"pino-pretty": "^13.1.2",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.9.3",
+		"undici": "^7.16.0",
 		"vitest": "^4.0.9"
 	},
 	"dependencies": {
