--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
 	"scripts": {
 		"start": "node dist/server.js",
 		"start:dev": "npx tsx --watch --env-file=.env.development src/server.ts",
-    "build": "tsc",
+		"build": "tsc",
 		"lint-format": "npx @biomejs/biome check --write",
 		"test": "docker compose -p kicks-server-test --env-file .env.test -f docker-compose.test.yml up --build --abort-on-container-exit && docker compose -p kicks-server-test --env-file .env.test -f docker-compose.test.yml down --rmi all -v",
-    "test:dev": "vitest --run",
+		"test:dev": "vitest --run",
 		"test:coverage": "vitest run --coverage",
 		"docker:dev:up": "docker compose -f docker-compose.dev.yml --env-file .env.development up --build",
 		"docker:dev:down": "docker compose -f docker-compose.dev.yml --env-file .env.development down --rmi all",
@@ -56,6 +56,7 @@
 		"@fastify/cors": "^11.1.0",
 		"@fastify/helmet": "^13.0.2",
 		"@fastify/rate-limit": "^10.3.0",
+		"@fastify/schedule": "^6.0.0",
 		"@fastify/sensible": "^6.0.3",
 		"@fastify/swagger": "^9.6.1",
 		"@fastify/swagger-ui": "^5.2.3",
@@ -73,6 +74,7 @@
 		"nodemailer": "^7.0.10",
 		"pg": "^8.16.3",
 		"prom-client": "^15.1.3",
+		"toad-scheduler": "^3.1.0",
 		"zod": "^4.1.12"
 	}
 }
