--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"includes": ["src/**", "tests/**", "seeds/**"]
+		"includes": ["src/**", "tests/**", "seeds/**", "migrations/**"]
 	},
 	"formatter": {
 		"enabled": true,
