--- a/package.json
+++ b/package.json
@@ -1,80 +1,82 @@
 {
-	"name": "kicks-server",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "node dist/server.js",
-		"start:dev": "npx tsx --watch --env-file=.env.development src/server.ts",
-		"build": "tsc",
-		"lint-format": "npx @biomejs/biome check --write",
-		"test": "docker compose -p kicks-server-test --env-file .env.test -f docker-compose.test.yml up --build --abort-on-container-exit && docker compose -p kicks-server-test --env-file .env.test -f docker-compose.test.yml down --rmi all -v",
-		"test:dev": "vitest --run",
-		"test:coverage": "vitest run --coverage",
-		"docker:dev:up": "docker compose -f docker-compose.dev.yml --env-file .env.development up --build",
-		"docker:dev:down": "docker compose -f docker-compose.dev.yml --env-file .env.development down --rmi all",
-		"kysely:codegen": "kysely-codegen --out-file ./src/common/types/db.ts --camel-case --dialect=postgres --runtime-enums=pascal-case",
-		"migration:create": "npx kysely migrate:make",
-		"migration:run": "npx kysely migrate:latest",
-		"migration:rollback": "npx kysely migrate:rollback --all",
-		"migration:list": " npx kysely migrate:list",
-		"migration:up": "npx kysely migprate:up",
-		"migration:down": "npx kysely migrate:down",
-		"migration:run:dev": "npx kysely migrate:latest -e=development",
-		"migration:rollback:dev": "npx kysely migrate:rollback --all -e=development",
-		"migration:list:dev": " npx kysely migrate:list -e=development",
-		"migration:up:dev": "npx kysely migprate:up -e=development",
-		"migration:down:dev": "npx kysely migrate:down -e=development",
-		"seed:create": "npx kysely seed:make",
-		"seed:run": "npx kysely seed:run",
-		"seed:list": "npx kysely seed:list",
-		"seed:run:dev": "npx kysely seed:run -e=development",
-		"seed:list:dev": "npx kysely seed:list -e=development"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"type": "module",
-	"devDependencies": {
-		"@biomejs/biome": "2.3.5",
-		"@faker-js/faker": "^10.1.0",
-		"@testcontainers/redis": "^11.8.1",
-		"@tsconfig/node24": "^24.0.1",
-		"@types/node": "^24.10.0",
-		"@types/nodemailer": "^7.0.3",
-		"kysely-codegen": "^0.19.0",
-		"kysely-ctl": "^0.19.0",
-		"pino-pretty": "^13.1.2",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.9.3",
-		"undici": "^7.16.0",
-		"vitest": "^4.0.9"
-	},
-	"dependencies": {
-		"@fastify/autoload": "^6.3.1",
-		"@fastify/cookie": "^11.0.2",
-		"@fastify/cors": "^11.1.0",
-		"@fastify/helmet": "^13.0.2",
-		"@fastify/rate-limit": "^10.3.0",
-		"@fastify/schedule": "^6.0.0",
-		"@fastify/sensible": "^6.0.3",
-		"@fastify/swagger": "^9.6.1",
-		"@fastify/swagger-ui": "^5.2.3",
-		"@opentelemetry/api": "^1.9.0",
-		"@opentelemetry/auto-instrumentations-node": "^0.67.0",
-		"@opentelemetry/sdk-metrics": "^2.2.0",
-		"@opentelemetry/sdk-node": "^0.208.0",
-		"@opentelemetry/sdk-trace-node": "^2.2.0",
-		"close-with-grace": "^2.3.0",
-		"fastify": "^5.6.1",
-		"fastify-plugin": "^5.1.0",
-		"fastify-type-provider-zod": "^6.1.0",
-		"ioredis": "^5.8.2",
-		"kysely": "^0.28.8",
-		"nodemailer": "^7.0.10",
-		"pg": "^8.16.3",
-		"prom-client": "^15.1.3",
-		"toad-scheduler": "^3.1.0",
-		"zod": "^4.1.12"
-	}
+  "name": "kicks-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node dist/server.js",
+    "start:dev": "npx tsx --watch --env-file=.env.development src/server.ts",
+    "build": "tsc",
+    "lint-format": "npx @biomejs/biome check --write",
+    "test": "docker compose -p kicks-server-test --env-file .env.test -f docker-compose.test.yml up --build --abort-on-container-exit && docker compose -p kicks-server-test --env-file .env.test -f docker-compose.test.yml down --rmi all -v",
+    "test:dev": "vitest --run",
+    "test:coverage": "vitest run --coverage",
+    "docker:dev:up": "docker compose -f docker-compose.dev.yml --env-file .env.development up --build",
+    "docker:dev:down": "docker compose -f docker-compose.dev.yml --env-file .env.development down --rmi all",
+    "kysely:codegen": "kysely-codegen --out-file ./src/common/types/db.ts --camel-case --dialect=postgres --runtime-enums=pascal-case",
+    "migration:create": "npx kysely migrate:make",
+    "migration:run": "npx kysely migrate:latest",
+    "migration:rollback": "npx kysely migrate:rollback --all",
+    "migration:list": " npx kysely migrate:list",
+    "migration:up": "npx kysely migrate:up",
+    "migration:down": "npx kysely migrate:down",
+    "migration:run:dev": "npx kysely migrate:latest -e=development",
+    "migration:rollback:dev": "npx kysely migrate:rollback --all -e=development",
+    "migration:list:dev": " npx kysely migrate:list -e=development",
+    "migration:up:dev": "npx kysely migprate:up -e=development",
+    "migration:down:dev": "npx kysely migrate:down -e=development",
+    "seed:create": "npx kysely seed:make",
+    "seed:run": "npx kysely seed:run",
+    "seed:list": "npx kysely seed:list",
+    "seed:run:dev": "npx kysely seed:run -e=development",
+    "seed:list:dev": "npx kysely seed:list -e=development"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
+  "devDependencies": {
+    "@biomejs/biome": "2.3.5",
+    "@faker-js/faker": "^10.1.0",
+    "@testcontainers/redis": "^11.8.1",
+    "@tsconfig/node24": "^24.0.1",
+    "@types/node": "^24.10.0",
+    "@types/nodemailer": "^7.0.3",
+    "kysely-codegen": "^0.19.0",
+    "kysely-ctl": "^0.19.0",
+    "pino-pretty": "^13.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3",
+    "undici": "^7.16.0",
+    "vitest": "^4.0.9"
+  },
+  "dependencies": {
+    "@fastify/autoload": "^6.3.1",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.1.0",
+    "@fastify/helmet": "^13.0.2",
+    "@fastify/multipart": "^9.3.0",
+    "@fastify/rate-limit": "^10.3.0",
+    "@fastify/schedule": "^6.0.0",
+    "@fastify/sensible": "^6.0.3",
+    "@fastify/swagger": "^9.6.1",
+    "@fastify/swagger-ui": "^5.2.3",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.0",
+    "@opentelemetry/sdk-metrics": "^2.2.0",
+    "@opentelemetry/sdk-node": "^0.208.0",
+    "@opentelemetry/sdk-trace-node": "^2.2.0",
+    "close-with-grace": "^2.3.0",
+    "cloudinary": "^2.8.0",
+    "fastify": "^5.6.1",
+    "fastify-plugin": "^5.1.0",
+    "fastify-type-provider-zod": "^6.1.0",
+    "ioredis": "^5.8.2",
+    "kysely": "^0.28.8",
+    "nodemailer": "^7.0.10",
+    "pg": "^8.16.3",
+    "prom-client": "^15.1.3",
+    "toad-scheduler": "^3.1.0",
+    "zod": "^4.1.12"
+  }
 }
